# OneJava

./: .gitignore
AI/aisuite-main/: .env.sample  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
AI/aisuite-main/.github/workflows/: run_pytest.yml
AI/aisuite-main/aisuite/: client.py  example.py  provider.py
AI/aisuite-main/aisuite/framework/: __init__.py  chat_completion_response.py  choice.py  message.py  provider_interface.py
AI/aisuite-main/aisuite/providers/: anthropic_provider.py  aws_provider.py  azure_provider.py  fireworks_provider.py  google_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  sambanova_provider.py  together_provider.py  watsonx_provider.py  xai_provider.py
AI/aisuite-main/examples/: AISuiteDemo.ipynb  QnA_with_pdf.ipynb  client.ipynb  llm_reasoning.ipynb
AI/aisuite-main/examples/chat-ui/: README.md  chat.py  config.yaml
AI/aisuite-main/examples/chat-ui/.streamlit/: config.toml
AI/aisuite-main/guides/: README.md  anthropic.md  aws.md  azure.md  google.md  groq.md  huggingface.md  openai.md  sambanova.md  watsonx.md  xai.md
AI/aisuite-main/tests/client/: test_client.py
AI/aisuite-main/tests/providers/: test_google_provider.py  test_groq_provider.py  test_mistral_provider.py  test_ollama_provider.py  test_sambanova_provider.py  test_watsonx_provider.py
Temporal/helloWorld/untitled/: pom.xml
book/: github_URL.md
deployment/temporal/docker/: dockerfile
deployment/temporal/server/: Deployment.yaml  Service.yaml
forhksong/B.題目環境container/JavaPython轉換/: Dockerfile  run-java-python.sh
forhksong/C.Sample/TopicB/: convert_Tool_by_Compile.py
forhksong/C.Sample/TopicC/: convert_to_k8s.py
forhksong/E. 模型訓練/: note.md
(+80 files in other folders)
